kubernetes/clusters/k2s/media/excalidraw/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/auth-url: https://oauth.nucstack.com/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.nucstack.com/oauth2/start
spec:
  ingressClassName: nginx
  rules:
  - host: "draw.nucstack.com"
    http:
      paths:
      - backend:
          service:
            name: excalidraw
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "excalidraw.nucstack.com"
